[build-system]
   requires = ["setuptools>=61.0"]
   build-backend = "setuptools.build_meta"

   [project]
   name = "civstation"
   version = "0.1.0"
   authors = [
     { name="Scott Windsor", email="windsorwindsor2@protonmail.com" },
   ]
   description = "Support for stationing used in civil plans, in US units."
   readme = "README.md"
   license = { file = "LICENSE.txt" }
   requires-python = ">=3.7"
   classifiers = [
       "Programming Language :: Python :: 3",
       "License :: OSI Approved :: MIT License",
       "Operating System :: OS Independent",
   ]

   [project.urls]
   "Homepage" = "https://github.com/windsorwindsor2/civil-stations"
   "Bug Tracker" = "https://github.com/windsorwindsor2/civil-stations/issues"

   